[metadata]
name = lcall_bug
version = 0.0.1
author = David Britton
author-email = davidpbritton@gmail.com
summary = Reproduce python unicode issue.
description-file = README.md
home-page = https://forum.snapcraft.io/t/localization-of-python-snaps/2066
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3
    Programming Language :: Python
